# django-examples

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
base/: settings.py  urls.py
shopping/: admin.py  models.py
shopping/migrations/: 0001_initial.py
